Revert "Move to new Installer JBSM"
This reverts commit 4fcaf1b09f669b1a8d864e387f520e689871cd41.

--- a/build.xml
+++ b/build.xml
@@ -19,11 +19,19 @@
 		<mkdir dir="${basedir}/build/reports"/>
 		<mkdir dir="${basedir}/docs"/>
 		<mkdir dir="${basedir}/build/packages/component"/>
+		<mkdir dir="${basedir}/build/packages/modules"/>
+		<mkdir dir="${basedir}/build/packages/plugins"/>
 	</target>
 
 	<!-- List of all files that are packaged and distributed -->
 	<fileset dir="${basedir}" id="distributed_files">
 		<include name="com_biblestudy/**/*.php"/>
+		<include name="mod_biblestudy/**/*.php"/>
+		<include name="mod_biblestudy_podcast/**/*.php"/>
+		<include name="plg_biblestudy_backup/**/*.php"/>
+		<include name="plg_biblestudy_finder/**/*.php"/>
+		<include name="plg_biblestudy_podcast/**/*.php"/>
+		<include name="plg_biblestudhy_search/**/*.php"/>
 		<exclude name=".git"/>
 	</fileset>
 
@@ -102,11 +110,13 @@
 			<mapper type="flatten"/>
 			<fileset dir="${basedir}/build/packages">
 				<include name="component/*.zip"/>
+				<include name="plugins/*.zip"/>
+				<include name="modules/*.zip"/>
 			</fileset>
 		</copy>
 		<copy todir="${basedir}/build/packages/_tmp">
 			<fileset dir="${basedir}/build">
-				<include name="pkg_biblestudy.xml"/>
+				<include name="pkg_biblestudy_package.xml"/>
 			</fileset>
 		</copy>
 
@@ -124,6 +134,26 @@
 		<zip destfile="${basedir}/build/packages/component/com_biblestudy.zip" basedir="${basedir}/com_biblestudy"/>
 		<!--Reset back to a development state-->
 		<phingcall target="dev.init"/>
+	</target>
+
+	<!-- Create mod_biblestudy.zip and mod_biblestudy_podcast.zip -->
+	<target name="package.modules" depends="init" description="Builds the modules">
+		<delete file="${basedir}/build/packages/modules/mod_biblestudy.zip"/>
+		<delete file="${basedir}/build/packages/modules/mod_biblestudy_podcast.zip"/>
+		<zip destfile="${basedir}/build/packages/modules/mod_biblestudy.zip" basedir="${basedir}/mod_biblestudy"/>
+		<zip destfile="${basedir}/build/packages/modules/mod_biblestudy_podcast.zip" basedir="${basedir}/mod_biblestudy_podcast"/>
+	</target>
+
+	<!-- Create plg_biblestudy_finder.zip, plg_biblestudy_search.zip, plg_biblestudy_podcast.zip, and plg_biblestudy_backup.zip -->
+	<target name="package.plugins" depends="init" description="Builds the plugins">
+		<delete file="${basedir}/build/packages/plugins/plg_biblestudy_finder.zip"/>
+		<delete file="${basedir}/build/packages/plugins/plg_biblestudy_search.zip"/>
+		<delete file="${basedir}/build/packages/plugins/plg_biblestudy_podcast.zip"/>
+		<delete file="${basedir}/build/packages/plugins/plg_biblestudy_backup.zip"/>
+		<zip destfile="${basedir}/build/packages/plugins/plg_biblestudy_finder.zip" basedir="${basedir}/plg_biblestudy_finder"/>
+		<zip destfile="${basedir}/build/packages/plugins/plg_biblestudy_search.zip" basedir="${basedir}/plg_biblestudy_search"/>
+		<zip destfile="${basedir}/build/packages/plugins/plg_biblestudy_podcast.zip" basedir="${basedir}/plg_biblestudy_podcast"/>
+		<zip destfile="${basedir}/build/packages/plugins/plg_biblestudy_backup.zip" basedir="${basedir}/plg_biblestudy_backup"/>
 	</target>
 
 	<!-- Setup config file for running the Selenium Webdriver tests -->
