--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,18 @@
     "homepage": "https://github.com/Joomla-Bible-Study/Joomla-Bible-Study",
     "license": "GPL-2.0+",
     "config": {
+      "platform": {
+        "php": "5.3.10"
+      },
       "bin-dir": "bin"
     },
     "require": {
       "php": ">=5.3.10",
       "ircmaxell/password-compat": "1.*",
       "leafo/lessphp": "0.3.9",
-      "phpmailer/phpmailer": "5.2.9",
+      "paragonie/random_compat": "~1.0",
+      "phpmailer/phpmailer": "5.2.14",
+      "symfony/polyfill-php56": "~1.0",
       "symfony/yaml": "2.*"
     },
     "require-dev": {
@@ -21,7 +26,8 @@
         "phpmd/phpmd": "@stable",
         "pear/versioncontrol_git": "dev-master",
         "pear/pear_exception": "dev-master",
-        "phpunit/phpunit": "4.1.*",
+        "phpunit/phpunit": "4.*",
+        "phpunit/dbunit": "~1.3",
         "sebastian/phpcpd": "2.0.0",
         "phploc/phploc": "2.0.4",
         "squizlabs/php_codesniffer": "~1.5",
