--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: php
 
 env:
   global:
-    - RUN_PHPCS="no"
+    - RUN_PHPCS="yes"
     - INSTALL_MEMCACHED="yes"
     - INSTALL_REDIS="yes"
 
@@ -13,14 +13,15 @@ matrix:
   include:
     - php: 5.3
       env: INSTALL_APC="yes"
-    - php: 5.4
-      env: INSTALL_APC="yes"
-    - php: 5.5
-      env: INSTALL_APCU="yes"
-    - php: 5.6
-      env: RUN_PHPCS="yes" INSTALL_APCU="yes"
-    - php: 7.0
-      env: INSTALL_APCU_BC_BETA="no" INSTALL_MEMCACHED="no" INSTALL_REDIS="no" # Disabled apcu_bc install until https://github.c
+      env: RUN_PHPCS="yes"
+#    - php: 5.4
+#      env: INSTALL_APC="yes"
+#    - php: 5.5
+#      env: INSTALL_APCU="yes"
+#    - php: 5.6
+#      env: RUN_PHPCS="yes" INSTALL_APCU="yes"
+#    - php: 7.0
+#      env: INSTALL_APCU_BC_BETA="no" INSTALL_MEMCACHED="no" INSTALL_REDIS="no" # Disabled apcu_bc install until https://github.c
 
 services:
   - memcached
