--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_script:
 
 script:
   #- libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml
-  - sh -c "if [ "$RUN_PHPCS" == "yes" ]; then bin/phpcs --report=full --extensions=php -p --standard=build/phpcs/Joomla .; fi"
+  - sh -c "bin/phpcs --report=full --extensions=php -p --standard=build/phpcs/Joomla"
 
 branches:
   except:
