--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
       "leafo/lessphp": "0.3.9",
       "paragonie/random_compat": "~1.0",
       "phpmailer/phpmailer": "5.2.14",
+      "phpdocumentor/phpdocumentor": "2.*",
       "symfony/polyfill-php56": "~1.0",
       "symfony/yaml": "2.*"
     },
