--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/tests/test.html
 /bin
 /tests/test.css
 # System files #
@@ -35,18 +36,11 @@ com_biblestudy/admin/views/test/tmpl/index.html
 
 tests/unit/.joomla-cms/
 
-/vendor/
-/bin/phing
-/bin/pdepend
-/bin/phpcpd
-/bin/phploc
-/bin/phpmd
-/bin/phpunit
-/bin/phpcs
+/vendor
 /composer.phar
 
 tests/.joomla-cms
 
-*.phar
-
 tests/test.php
+
+*.html
