--- a/build.xml
+++ b/build.xml
@@ -117,6 +117,7 @@
 		<copy todir="${basedir}/build/packages/_tmp">
 			<fileset dir="${basedir}/build">
 				<include name="pkg_biblestudy_package.xml"/>
+				<include name="script.php"/>
 			</fileset>
 		</copy>
 
