update to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ services:
   - redis-server
 
 before_script:
-  phpenv config-rm xdebug.ini
+  - phpenv config-rm xdebug.ini
   # Make sure all dev dependencies are installed
   - composer install
   # Set up Apache
