--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ language: php
 env:
   global:
     - RUN_PHPCS="yes"
+    - INSTALL_MEMCACHE="yes"
     - INSTALL_MEMCACHED="yes"
     - INSTALL_REDIS="yes"
 
 matrix:
+  fast_finish: true
   include:
     - php: 5.3
       env: INSTALL_APC="yes"
@@ -23,6 +25,7 @@ matrix:
 #      env: INSTALL_APCU_BC_BETA="no" INSTALL_MEMCACHED="no" INSTALL_REDIS="no" # Disabled apcu_bc install until https://github.c
 
 services:
+  - memcache
   - memcached
   - redis-server
 
@@ -30,18 +33,11 @@ before_script:
   - phpenv config-rm xdebug.ini
   # Make sure all dev dependencies are installed
   - composer install
-  # Set up Apache
-  # - ./build/travis/php-apache.sh
-  # Enable additional PHP extensions
-  - if [ "$INSTALL_MEMCACHED" == "yes" ]; then phpenv config-add build/travis/phpenv/memcached.ini; fi
-  - if [ "$INSTALL_APC" == "yes" ]; then phpenv config-add build/travis/phpenv/apc-$TRAVIS_PHP_VERSION.ini; fi
-  - if [ "$INSTALL_APCU" == "yes" ]; then printf "\n" | pecl install apcu-4.0.10; fi
-  - if [ "$INSTALL_APCU_BC_BETA" == "yes" ]; then printf "\n" | pecl install apcu_bc-beta; fi
-  - if [ "$INSTALL_REDIS" == "yes" ]; then phpenv config-add build/travis/phpenv/redis.ini; fi
 
 script:
   #- libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml
-  - sh -c "if [ '$TRAVIS_PHP_VERSION' != '7.0' ]; then bin/phpcs --report=full --extensions=php -p --standard=build/phpcs/Joomla .; fi"
+  - if [[ $RUN_PHPCS == "yes" ]]; then bin/phpcs --report=full --extensions=php -p --standard=build/phpcs/Joomla .; fi
+  - if [[ $RUN_UNIT_TESTS == "yes" ]]; then libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml; fi
 
 branches:
   except:
