clean up travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ language: php
 env:
   global:
     - RUN_PHPCS="yes"
+    - RUN_UNIT_TESTS="no"
     - INSTALL_MEMCACHE="yes"
     - INSTALL_MEMCACHED="yes"
     - INSTALL_REDIS="yes"
@@ -14,15 +15,10 @@ matrix:
   fast_finish: true
   include:
     - php: 5.3
-      env: INSTALL_APC="yes"
 #    - php: 5.4
-#      env: INSTALL_APC="yes"
 #    - php: 5.5
-#      env: INSTALL_APCU="yes"
 #    - php: 5.6
-#      env: RUN_PHPCS="yes" INSTALL_APCU="yes"
 #    - php: 7.0
-#      env: INSTALL_APCU_BC_BETA="no" INSTALL_MEMCACHED="no" INSTALL_REDIS="no" # Disabled apcu_bc install until https://github.c
 
 services:
   - memcache
