--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,42 @@
 {
-    "name": "joomla-bible-study/joomla-bible-study",
-    "type": "project",
-    "description": "Joomla-Bible-Study",
-    "keywords": ["bible", "biblestudy", "joomlabiblestudy"],
-    "homepage": "https://github.com/Joomla-Bible-Study/Joomla-Bible-Study",
-    "license": "GPL-2.0+",
-    "config": {
-      "platform": {
-        "php": "5.3.10"
-      },
-      "bin-dir": "bin"
-    },
-    "require": {
-      "php": ">=5.3.10",
-      "ircmaxell/password-compat": "1.*",
-      "leafo/lessphp": "0.3.9",
-      "paragonie/random_compat": "~1.0",
-      "phpmailer/phpmailer": "5.2.14",
-      "phpdocumentor/phpdocumentor": "2.*",
-      "symfony/polyfill-php56": "~1.0",
-      "symfony/yaml": "2.*"
-    },
-    "require-dev": {
-        "phing/phing": "2.*",
-        "pdepend/pdepend": "~2.0",
-        "phpmd/phpmd": "2.*",
-        "pear/versioncontrol_git": "dev-master",
-        "pear/pear_exception": "dev-master",
-        "phpunit/phpunit": "4.*",
-        "phpunit/dbunit": "~1.3",
-        "sebastian/phpcpd": "2.0.0",
-        "phploc/phploc": "2.0.4",
-        "squizlabs/php_codesniffer": "~1.5",
-        "pear/cache_lite": "1.7.16"
-    }
+  "name": "joomla-bible-study/joomla-bible-study",
+  "type": "project",
+  "description": "Joomla-Bible-Study",
+  "keywords": [
+	"bible",
+	"biblestudy",
+	"joomlabiblestudy"
+  ],
+  "homepage": "https://github.com/Joomla-Bible-Study/Joomla-Bible-Study",
+  "license": "GPL-2.0+",
+  "config": {
+	"platform": {
+	  "php": "5.3.10"
+	},
+	"bin-dir": "bin"
+  },
+  "require": {
+	"php": ">=5.3.10",
+	"phpdocumentor/phpdocumentor": "2.*",
+	"ircmaxell/password-compat": "1.*",
+	"leafo/lessphp": "0.5.0",
+	"paragonie/random_compat": "~1.0",
+	"phpmailer/phpmailer": "^5.2.20",
+	"symfony/polyfill-php55": "~1.2",
+	"symfony/polyfill-php56": "~1.0",
+	"symfony/yaml": "2.*",
+	"simplepie/simplepie": "1.3.1"
+  },
+  "require-dev": {
+	"phing/phing": "2.*",
+	"pdepend/pdepend": "~2.0",
+	"phpmd/phpmd": "2.*",
+	"pear/versioncontrol_git": "dev-master",
+	"pear/pear_exception": "dev-master",
+	"phpunit/phpunit": "^4.8.35",
+	"phpunit/dbunit": "~1.3",
+	"friendsofphp/php-cs-fixer": "~1.11",
+	"squizlabs/php_codesniffer": "~1.5",
+	"pear/cache_lite": "1.7.16"
+  }
 }
