--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ docs/namespaces/
 docs/packages/
 *.html
 /bin/
+com_biblestudy/media/css/biblestudy.css.map
+com_biblestudy/media/css/general.css.map
+node_modules/yui-compressor/
+package-lock.json
+/node_modules/
