--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 	"symfony/polyfill-php56": "~1.0",
 	"symfony/yaml": "2.*",
 	"simplepie/simplepie": "1.3.1",
-	"ext-json": "*"s
+	"ext-json": "*"
   },
   "require-dev": {
 	"phing/phing": "2.*",
