--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
   "prefer-stable": true,
   "config": {
 	"platform": {
-	  "php": "5.6.34"
+	  "php": "5.6.40"
 	},
 	"bin-dir": "vendor/bin"
   },
   "require": {
-	"php": ">=5.6.34",
+	"php": ">=5.6.40",
 	"phpdocumentor/phpdocumentor": "2.*",
 	"ircmaxell/password-compat": "1.*",
 	"leafo/lessphp": "0.5.0",
@@ -37,7 +37,7 @@
 	"phpmd/phpmd": "*",
 	"phploc/phploc": "*",
 	"phpdocumentor/phpdocumentor": "*",
-	"squizlabs/php_codesniffer": "~2.8",
+	"squizlabs/php_codesniffer": "^2.8.0",
 	"mayflower/php-codebrowser": "*",
 	"sebastian/phpcpd": "*",
 	"pear/versioncontrol_git": "dev-master",
@@ -45,9 +45,16 @@
 	"phpunit/dbunit": "~1.3",
 	"friendsofphp/php-cs-fixer": "~1.11",
 	"pear/cache_lite": "1.7.16",
-	"joomla/coding-standards": "~2.0"
+	"joomla/coding-standards": "^2.0"
+  },
+  "extra": {
+	  "branch-alias": {
+		"dev-master": "2.x-dev"
+	  }
   },
   "scripts": {
-	"phpcs": "phpcs --standard=joomla"
+	"phpcs": "phpcs --standard=joomla",
+	"post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths ../../..",
+	"post-update-cmd" : "\"vendor/bin/phpcs\" --config-set installed_paths ../../.."
   }
 }
