--- a/composer.json
+++ b/composer.json
@@ -28,18 +28,18 @@
 	"symfony/polyfill-php56": "~1.0",
 	"symfony/yaml": "2.*",
 	"simplepie/simplepie": "1.3.1",
+	"roave/security-advisories": "dev-master",
 	"ext-json": "*"
   },
   "require-dev": {
-	"phing/phing": "*",
-	"phpunit/phpunit": "*",
-	"pdepend/pdepend": "*",
-	"phpmd/phpmd": "*",
-	"phploc/phploc": "*",
-	"phpdocumentor/phpdocumentor": "*",
+	"phing/phing": "^2.9",
+	"phpunit/phpunit": "^4.5",
+	"pdepend/pdepend": "^2.4",
+	"phpmd/phpmd": "^2.4",
+	"phploc/phploc": "^4.0",
 	"squizlabs/php_codesniffer": "^2.8.0",
-	"mayflower/php-codebrowser": "*",
-	"sebastian/phpcpd": "*",
+	"mayflower/php-codebrowser": "^1.1",
+	"sebastian/phpcpd": "^3.0",
 	"pear/versioncontrol_git": "dev-master",
 	"pear/pear_exception": "dev-master",
 	"phpunit/dbunit": "~1.3",
