--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
     "phpunit/phpunit": "^4.8.35",
     "phpunit/dbunit": "~1.3",
     "friendsofphp/php-cs-fixer": "~1.11",
-    "squizlabs/php_codesniffer": "~1.5",
+    "squizlabs/php_codesniffer": "^2.8.0",
     "pear/cache_lite": "1.7.16"
   },
   "extra": {
