--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,12 @@
     "joomla/filter": "^1.3.2",
     "joomla/image": "^1.5",
     "joomla/input": "~1.3",
-    "joomla/ldap": "~1.2",
     "joomla/registry": "^1.6",
     "joomla/session": "^1.3.4",
     "joomla/string": "^1.4",
     "joomla/uri": "~1.2",
     "joomla/utilities": "^1.6",
+    "ext-ldap": "*",
     "paragonie/random_compat": "~1.4",
     "paragonie/sodium_compat": "~1.6",
     "phpmailer/phpmailer": "^5.2.20",
