--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,6 @@
 	"joomla/utilities": "^1.6",
 	"ircmaxell/password-compat": "1.*",
 	"leafo/lessphp": "0.5.0",
-	"paragonie/random_compat": "~1.4",
 	"paragonie/sodium_compat": "~1.6",
 	"phpmailer/phpmailer": "^5.2.20",
 	"symfony/polyfill-php55": "~1.9",
@@ -67,8 +66,9 @@
 	"phpunit/phpunit": "^4.8.35",
 	"phpunit/dbunit": "~1.3",
 	"friendsofphp/php-cs-fixer": "~1.11",
-	"squizlabs/php_codesniffer": "~1.5",
-	"pear/cache_lite": "1.7.16"
+	"squizlabs/php_codesniffer": "^2.8.0",
+	"pear/cache_lite": "1.7.16",
+	"roave/security-advisories": "dev-master"
   },
   "extra": {
 	  "branch-alias": {
