--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,11 @@
 	"joomla/utilities": "^1.6",
 	"ircmaxell/password-compat": "1.*",
 	"leafo/lessphp": "0.5.0",
-	"paragonie/sodium_compat": "~1.6",
+	"paragonie/random_compat": "~1.4",
+	"paragonie/sodium_compat": "1.9.1",
 	"phpmailer/phpmailer": "^5.2.20",
+	"symfony/polyfill-php55": "~1.9",
+	"symfony/polyfill-php56": "~1.9",
 	"symfony/polyfill-php71": "~1.9",
 	"symfony/polyfill-php73": "~1.9",
 	"symfony/yaml": "2.*",
@@ -71,7 +74,7 @@
 	  }
   },
   "scripts": {
-	"phpcs": "phpcs --standard=joomla",
+	"phpcs": "phpcs --standard=/build/coding-standards/Joomla",
 	"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths ../../../..",
 	"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths ../../../.."
   }
