--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,7 @@
 	"phpunit/dbunit": "~1.3",
 	"friendsofphp/php-cs-fixer": "2.*.*",
 	"squizlabs/php_codesniffer": "^2.8.0",
-	"pear/cache_lite": "1.7.16",
-	"roave/security-advisories": "dev-master"
+	"pear/cache_lite": "1.7.16"
   },
   "extra": {
 	  "branch-alias": {
