--- a/composer.json
+++ b/composer.json
@@ -26,22 +26,9 @@
   },
   "require": {
 	"php": ">=5.6.40",
-	"joomla/application": "~1.9",
-	"joomla/archive": "~1.1.5",
-	"joomla/data": "~1.2",
-	"joomla/di": "~1.5",
-	"joomla/event": "~1.2",
-	"joomla/filter": "^1.3.2",
-	"joomla/image": "^1.5",
-	"joomla/input": "~1.3",
-	"joomla/registry": "^1.6",
-	"joomla/session": "^1.3.4",
-	"joomla/string": "^1.4",
-	"joomla/uri": "~1.2",
-	"joomla/utilities": "^1.6",
+	"joomla/framework": "dev-master",
 	"ircmaxell/password-compat": "1.*",
 	"leafo/lessphp": "0.5.0",
-	"paragonie/random_compat": "~1.4",
 	"paragonie/sodium_compat": "1.9.1",
 	"phpmailer/phpmailer": "^5.2.20",
 	"symfony/polyfill-php55": "~1.9",
@@ -54,6 +41,7 @@
 	"typo3/phar-stream-wrapper": "^2.1"
   },
   "require-dev": {
+	"roave/security-advisories": "dev-master",
 	"phing/phing": "^2.9",
 	"pdepend/pdepend": "^2.4",
 	"phpmd/phpmd": "^2.4",
