--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ before_script:
   - composer install
 
 script:
-  - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs --report=full --ignore=*/tests/*,*/data/*,*/vendor/*,*/tmpl/* --extensions=php -p --standard=build/coding-standards/Joomla .; fi
+  - phpcs --config-set installed_paths build/coding-standards/Joomla
+  - if [[ $RUN_PHPCS == "yes" ]]; then libraries/vendor/bin/phpcs --report=full --ignore=*/tests/*,*/data/*,*/vendor/*,*/tmpl/* --extensions=php -p --standard=build/coding-standards/CWM .; fi
   - if [[ $RUN_UNIT_TESTS == "yes" ]]; then libraries/vendor/bin/phpunit --configuration travisci-phpunit.xml; fi
 
 branches:
