--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "config": {
 	"optimize-autoloader": true,
 	"platform": {
-	  "php": "5.6.40"
+	  "php": "7.0.0"
 	},
 	"vendor-dir": "libraries/vendor"
   },
@@ -25,14 +25,11 @@
 	"docs": "https://www.christianwebministries.org/docs"
   },
   "require": {
-	"php": ">=5.6.40",
-	"joomla/framework": "dev-master",
+	"php": ">=7.0.0",
 	"ircmaxell/password-compat": "1.*",
 	"leafo/lessphp": "0.5.0",
 	"paragonie/sodium_compat": "1.9.1",
 	"phpmailer/phpmailer": "^5.2.20",
-	"symfony/polyfill-php55": "~1.9",
-	"symfony/polyfill-php56": "~1.9",
 	"symfony/polyfill-php71": "~1.9",
 	"symfony/polyfill-php73": "~1.9",
 	"symfony/yaml": "2.*",
@@ -50,7 +47,6 @@
 	"pear/versioncontrol_git": "dev-master",
 	"pear/pear_exception": "dev-master",
 	"phpunit/phpunit": "^4.8.35",
-	"phpunit/dbunit": "~1.3",
 	"friendsofphp/php-cs-fixer": "2.*.*",
 	"squizlabs/php_codesniffer": "^2.8.0",
 	"pear/cache_lite": "1.7.16"
@@ -61,8 +57,8 @@
 	  }
   },
   "scripts": {
-	"phpcs": "phpcs --standard=/build/coding-standards/CWM",
-	"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths ../../../..",
-	"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths ../../../.."
+	"phpcs": "phpcs --standard=CWM",
+	"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards",
+	"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards"
   }
 }
