--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"config": {
 		"optimize-autoloader": true,
 		"platform": {
-			"php": "5.6.40"
+			"php": "7.0.0"
 		},
 		"vendor-dir": "libraries/vendor"
 	},
@@ -25,27 +25,11 @@
 		"docs": "https://www.christianwebministries.org/docs"
 	},
 	"require": {
-		"php": ">=5.6.40",
-		"joomla/application": "~1.9",
-		"joomla/archive": "~1.1.5",
-		"joomla/data": "~1.2",
-		"joomla/di": "~1.5",
-		"joomla/event": "~1.2",
-		"joomla/filter": "^1.3.2",
-		"joomla/image": "^1.5",
-		"joomla/input": "~1.3",
-		"joomla/ldap": "~1.2",
-		"joomla/registry": "^1.6",
-		"joomla/session": "^1.3.4",
-		"joomla/string": "^1.4",
-		"joomla/uri": "~1.2",
-		"joomla/utilities": "^1.6",
+		"php": ">=7.0.0",
 		"ircmaxell/password-compat": "1.*",
 		"leafo/lessphp": "0.5.0",
-		"paragonie/sodium_compat": "~1.6",
+		"paragonie/sodium_compat": "1.9.1",
 		"phpmailer/phpmailer": "^5.2.20",
-		"symfony/polyfill-php55": "~1.9",
-		"symfony/polyfill-php56": "~1.9",
 		"symfony/polyfill-php71": "~1.9",
 		"symfony/polyfill-php73": "~1.9",
 		"symfony/yaml": "2.*",
@@ -54,6 +38,7 @@
 		"typo3/phar-stream-wrapper": "^2.1"
 	},
 	"require-dev": {
+		"roave/security-advisories": "dev-master",
 		"phing/phing": "^2.9",
 		"pdepend/pdepend": "^2.4",
 		"phpmd/phpmd": "^2.4",
@@ -61,13 +46,10 @@
 		"sebastian/phpcpd": "^3.0",
 		"pear/versioncontrol_git": "dev-master",
 		"pear/pear_exception": "dev-master",
-		"joomla/coding-standards": "^2.0",
 		"phpunit/phpunit": "^4.8.35",
-		"phpunit/dbunit": "~1.3",
-		"friendsofphp/php-cs-fixer": "~1.11",
+		"friendsofphp/php-cs-fixer": "2.*.*",
 		"squizlabs/php_codesniffer": "^2.8.0",
-		"pear/cache_lite": "1.7.16",
-		"roave/security-advisories": "dev-master"
+		"pear/cache_lite": "1.7.16"
 	},
 	"extra": {
 		"branch-alias": {
@@ -75,8 +57,8 @@
 		}
 	},
 	"scripts": {
-		"phpcs": "phpcs --standard=joomla",
-		"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths ../../../..",
-		"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths ../../../.."
+		"phpcs": "phpcs --standard=CWM",
+		"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards",
+		"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards"
 	}
 }
