--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
 		"symfony/yaml": "2.*",
 		"simplepie/simplepie": "1.3.1",
 		"google/recaptcha": "^1.1",
-		"typo3/phar-stream-wrapper": "^2.1"
+		"typo3/phar-stream-wrapper": "^2.1",
+	  "ext-mbstring": "*"
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
