--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
 	"simplepie/simplepie": "1.3.1",
 	"google/recaptcha": "^1.1",
 	"typo3/phar-stream-wrapper": "^2.1",
-	"ext-mbstring": "*"
+	"ext-mbstring": "*",
+	"ext-simplexml": "*"
   },
   "require-dev": {
 	"roave/security-advisories": "dev-master",
