--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
   "keywords": [
 	"bible",
 	"biblestudy",
-	"joomlabiblestudy"
+	"joomlabiblestudy",
+	"CWMProclaim",
+	"Proclaim"
   ],
   "homepage": "https://github.com/Joomla-Bible-Study/Proclaim",
   "license": "GPL-2.0-or-later",
@@ -14,7 +16,7 @@
   "config": {
 	"optimize-autoloader": true,
 	"platform": {
-	  "php": "7.2.0"
+	  "php": "7.4.0"
 	},
 	"vendor-dir": "libraries/vendor"
   },
@@ -24,7 +26,7 @@
 	"docs": "https://www.christianwebministries.org/docs"
   },
   "require": {
-	"php": ">=7.2.0",
+	"php": ">=7.4.0",
 	"ircmaxell/password-compat": "1.*",
 	"leafo/lessphp": "0.5.0",
 	"paragonie/sodium_compat": "1.9.1",
@@ -36,7 +38,8 @@
 	"google/recaptcha": "^1.1",
 	"typo3/phar-stream-wrapper": "^2.1",
 	"ext-mbstring": "*",
-	"ext-simplexml": "*"
+	"ext-simplexml": "*",
+	"ext-zip": "*"
   },
   "require-dev": {
 	"roave/security-advisories": "dev-master",
@@ -48,8 +51,8 @@
 	"pear/versioncontrol_git": "dev-master",
 	"pear/pear_exception": "dev-master",
 	"phpunit/phpunit": "^4.8.36",
-	"friendsofphp/php-cs-fixer": "2.*.*",
-	"squizlabs/php_codesniffer": "^2.9.2",
+	"squizlabs/php_codesniffer": "~3.5",
+	"phploc/phploc": "*",
 	"pear/cache_lite": "1.7.16"
   },
   "extra": {
@@ -59,7 +62,7 @@
   },
   "scripts": {
 	"phpcs": "phpcs --standard=CWM",
-	"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards",
-	"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards"
+	"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards/,libraries/vendor/joomla/coding-standards/,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards",
+	"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards/,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards"
   }
 }
